# cycept

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cycept.py  pyproject.toml
cycept/: __init__.py  call.py  compile.py  core.py
cycept/tests/: __init__.py  test_bench.py  test_cycept.py  test_perf.py
src/: cycept.py
tests/: test_cycept.py
